--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,15 @@ tmp/
 # Crash Log
 crash.log
 
+### Packages ###
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
 
 ### Linux ###
 *~
@@ -104,4 +113,3 @@ tramp
 
 ### SVN ###
 .svn/
-
